// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: Error 1`] = `
<Level
  level="ERROR"
  small={true}
/>
`;

exports[`should render correctly: Successful 1`] = `
<Level
  level="OK"
  small={true}
/>
`;
